--- a/index.css
+++ b/index.css
@@ -1,5 +1,8 @@
 body{
+    margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #00000015;
+
 }
 .container{
     margin-left: 20px;
@@ -7,50 +10,57 @@ body{
 }
 
 .header{
+  
   overflow-y: hidden;
   overflow-x: scroll;
   white-space: nowrap;
-  margin-top: 1px;
   padding:15px 20px;
   background: #ffffff;
-  color: rgb(0, 0, 0);
   font-size: 21px;
-  position: relative;
-  border-bottom: 1px solid black;
- 
+  position:relative;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.061);
+}
 
+#logo{
+    font-size: 25px;
+    color:blue;
 }
 
 .menu{
-    padding-left: 10px;
+    margin-left: 40px;
     font-size: 16px;
     text-decoration:none;
     color: rgb(0, 0, 0);
     font-weight: 100;
     text-align: center;
+    margin-top: 20px;
  
 }
 
-#tienda{
+#inicio{
     border-bottom: 2px solid rgb(255, 0, 0);
     text-align: center;
     font-weight: 800;
+}
+
+#text{
+    text-align: right;
 }
 
 #titulo{
     padding: 10px 10px;
     font-weight: 800;
     font-size: 24px;
+    
 }
 
 .intro{
-    margin-top: 20px;
+    margin-top: 25px;
 }
 
 #parrafo{
     padding: 10px  10px ;
-    border-top: 1px solid rgb(231, 231, 231);}
-
+    }
 
 .carrousel{
     overflow-x: scroll;
@@ -65,12 +75,12 @@ body{
 
 
 img{
-    width: 210px;
+    width: 400px;
     border: 1px solid rgba(0, 0, 0, 0.072);
     height: auto;
     margin-left: 10px;
-    border-radius: 10%;
-    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.131);;
+    border-radius: 5%;
+    /* box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.131);; */
 
 }
 
@@ -93,3 +103,7 @@ a{
     border-radius: 0%;
 }
 
+.IGPOSTS{
+    margin-left: 10px;
+    border-radius: 5%;
+}
