--- a/index.css
+++ b/index.css
@@ -1,114 +1,47 @@
 body{
-    margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #00000015;
-
-}
-.container{
-    margin-left: 20px;
-    margin-right: auto;
-}
-
-.header{
-  
-  overflow-y: hidden;
-  overflow-x: scroll;
-  white-space: nowrap;
-  padding:15px 20px;
-  background: #ffffff;
-  font-size: 21px;
-  position:relative;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.061);
+    background-color: rgba(0, 0, 0, 0.074);
+    padding: 0px;
 }
 
 #logo{
-    font-size: 25px;
-    color:blue;
-}
-
-.menu{
-    margin-left: 40px;
-    font-size: 16px;
-    text-decoration:none;
-    color: rgb(0, 0, 0);
-    font-weight: 100;
-    text-align: center;
-    margin-top: 20px;
- 
-}
-
-#inicio{
-    border-bottom: 2px solid rgb(255, 0, 0);
-    text-align: center;
     font-weight: 800;
-}
-
-#text{
-    text-align: right;
-}
-
-#titulo{
-    padding: 10px 10px;
-    font-weight: 800;
-    font-size: 24px;
-    
 }
 
 .intro{
-    margin-top: 25px;
+    margin-top: 20px;
 }
 
-#parrafo{
-    padding: 10px  10px ;
-    }
+#titulo{
+    font-weight: 800;
+    font-size: 21px;
+}
 
-.carrousel{
+
+.card2{
+    width: 250px;
+    flex-wrap: nowrap;
+}
+
+.container_area2{
+    display: flex;
+}
+
+.contenedor{
+    display: flex;
     overflow-x: scroll;
-    overflow-y: hidden;
-    white-space: nowrap;
-    background-color: rgba(255, 255, 255, 0.115);
-    padding-bottom: 15px;
-    padding-top: 15px;
-    scrollbar-width: none;
+    margin: 10px;
+   
 }
-
-
 
 img{
-    width: 400px;
-    border: 1px solid rgba(0, 0, 0, 0.072);
-    height: auto;
-    margin-left: 10px;
-    border-radius: 5%;
-    /* box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.131);; */
-
+    width: 200px;
 }
 
-.tittles{
-    margin-top: 10px;
-    margin-left: 20px;
-    font-weight: 800;
-    font-size: 20px;
-}
-
-a{
-    text-decoration: none;
-    color: black;
-}
-
-#banner{
-    width: auto;
-    height: auto;
-    margin-left: 10px;
-    border-radius: 0%;
-}
-
-.IGPOSTS{
-    margin-top: 10px;
-    width: auto;
-    height: 800px;
-    margin-left: 10px;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    white-space: nowrap;
+.carrusel{
+    width: 200px;
+    margin: 10px;
+    text-align: center;
+    border: 2px solid rgb(200, 46, 46, 0,11);
+    
 }
