--- a/index.css
+++ b/index.css
@@ -1,7 +1,8 @@
 
 body{
-    background-color: rgba(12, 12, 12, 0.08);
+    background-color: rgba(0, 0, 0, 0.055);
     font-family:Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
 }
 
 p {
@@ -31,7 +32,7 @@ p {
 .banner_container{
     display: flex;
     justify-content: center;
-    height: 270px;
+    height: 250px;
 }
 
 #banner{
@@ -39,20 +40,31 @@ p {
     height: 300px;
     object-fit:cover;
     border: 2px solid white;
-    border-radius: 5%;
 }
 
 .top3_items{
   display: flex;
   justify-content: center;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  padding: 20px;
+  
 }
+.item_image_container{
+    padding: 5px;
+    display: flex;
+}
+
 .item_image{
-    width: 200px;
+    width: 150px;
     height: 150px;
-    object-fit: cover;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 10px 10px 10px 10px;
+    object-fit:cover;
+    border-radius: 5%;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.top3_items::-webkit-scrollbar {
+    display: none;
 }
 
 .carousel_container{
@@ -60,19 +72,30 @@ p {
     overflow-x: scroll;
     flex-wrap: nowrap;
     scrollbar-width: none;
+    padding-bottom: 10px;
 }
 .carousel_container::-webkit-scrollbar {
     display: none;
 }
 .carrusel_items{
-    padding: 5px;
     border-radius: 5%;
+    padding: 5px;
 }
 
 #carousel_image{
     height: 150px;
-    width: 350px;
+    width: 300px;
     object-fit:cover;
+    border-radius: 5px 5px 0px 0px;
+}
+
+.item_container{
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+    padding-bottom: 5px;
+    background-color: azure;
+    border-radius: 5px;
+    height: 200px;
+    width: 300px;
 }
 
 .text_price_field{
@@ -117,13 +140,7 @@ p {
 }
 
 
-.item_container{
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    padding-bottom: 5px;
-    background-color: azure;
-    border-radius: 5%;
-    width: auto;
-}
+
 
 @media only screen and (max-width: 600px){
 
